--- a/trabajoIntegrador/views/product.ejs
+++ b/trabajoIntegrador/views/product.ejs
@@ -1,54 +1,58 @@
 <!DOCTYPE html>
 <html lang="es">
-<!-- Include Head -->
-<%- include('./partials/head') %>
-<body>
-	<!-- Header -->
-	<%- include('./partials/header') %>
-	<!-- /Header -->
- <main>
-	<!-- product detail -->
-	<div class="containerProducts products-wrapper">
-		<div class="d-flex align-items-center">
-			<h2 class="products-title"><%= informacionProducto[0].nombre %>       <a href="/product/add"> <i class="fa-regular fa-pen-to-square"></i></a></h2> 
-		</div>
-		<div class="product-detail">
-			<div class="row">
-				<article class="col-12 col-lg-8 product-detail-info">
-					<img src=<%= informacionProducto[0].imagen %>  alt=<%= informacionProducto[0].nombre %> class="product-detail-img">
-					<p class="product-detail-description">
-						<%= informacionProducto[0].descripcion %>
-					</p>
-					
-					
+	<!-- Include Head -->
+	<%- include('./partials/head') %>
+	<body>
+		<!-- Header -->
+		<%- include('./partials/header') %>
+		<main>
+			<!-- Product detail -->
+			<section class="containerProducts products-wrapper">
+
+				<article class="d-flex align-items-center">
+					<h2 class="products-title"><%= informacionProducto[0].nombre %>       <a href="/product/add"> <i class="fa-regular fa-pen-to-square"></i></a></h2> 
 				</article>
-				<div class="col-12 col-lg-4">
-					<section class="comments">
-						<% for( let i = 0; i < comentarios.length; i++ ) { %>
-							<article>
-								<img src=<%= comentarios[i].foto_perfil %> alt="Foto perfil">
-								<div class="data">
-									<p class="user">
-									<strong> <a href="/profile"><%= comentarios[i].nombre_usuario %>: </a> </strong>
-									<%= comentarios[i].texto_comentario %></p>
-								</div>
-							</article>
-						<% } %>
+
+				<article class="product-detail">
+					<section class="row">
+						<article class="col-12 col-lg-8 product-detail-info">
+							<img src=<%= informacionProducto[0].imagen %>  alt=<%= informacionProducto[0].nombre %> class="product-detail-img">
+							<p class="product-detail-description">
+								<%= informacionProducto[0].descripcion %>
+							</p>
+							
+							
+						</article>
+						<article class="col-12 col-lg-4">
+							<section class="comments">
+								<% for( let i = 0; i < comentarios.length; i++ ) { %>
+									<article>
+										<img src=<%= comentarios[i].foto_perfil %> alt="Foto perfil">
+										<div class="data">
+											<p class="user">
+											<strong> <a href="/profile"><%= comentarios[i].nombre_usuario %>: </a> </strong>
+											<%= comentarios[i].texto_comentario %></p>
+										</div>
+									</article>
+								<% } %>
+							</section>
+
+							<form class="form" action="" method="POST">
+								<input class="form-input" type="text" value="" placeholder="Agregar comentario">
+								<button type="submit" class="buy-now-button">AGREGAR COMENTARIO</button>
+							</form>
+							<hr>
+
+						</article>
 
 					</section>
-					<form class="form" action="" method="POST">
-						<input class="form-input" type="text" value="" placeholder="Agregar comentario">
-						<button type="submit" class="buy-now-button">AGREGAR COMENTARIO</button>
-					</form>
-					<hr>
-				</div>
-			</div>
-		</div>
-	</div>
-	</main>
+				</article>
+				
+			</section>
+		</main>
 
-	<%- include('./partials/footer') %>
+		<!-- footer -->
+		<%- include('./partials/footer') %>
 
-
-</body>	
+	</body>	
 </html>
