--- a/trabajoIntegrador/views/profile.ejs
+++ b/trabajoIntegrador/views/profile.ejs
@@ -6,186 +6,66 @@
 <%- include('./partials/headerLogueado') %>
 
 	<main>
-	<!-- Datos del usuario -->
-	<section class="info-usuario container products-wrapper">
-		<div class="row">
-			<div class="img-container offset-3 col-2">
-				<img src=<%= profile.foto_perfil %> alt="foto de perfil" class="foto-perfil">
-			</div>
-			<div class="data-container col-6">
-				<div class="d-flex align-items-center ">
-					<h1 class="main-title"><%= profile.usuario %><!-- Nombre del usuario --> 
-						<a href="/profile/edit">
-							<i class="fas fa-cog"></i>
-						</a>
-					</h1>
-					<a class="btn mt-3 ml-4" href="">SEGUIR</a>
-				</div>
-				<div>
-					<ul class="">
-						<li><%= profile.email %></li>
-						<li>8 productos</li>
-						<li>200 seguidores</li>
-						<li>300 comentarios</li>
-					</ul>
-				</div>
-			</div>
-		</div>
-	</section>
-	<!-- /Datos del usuario -->
+		<!-- Datos del usuario -->
+		<section class="info-usuario container products-wrapper">
+			<section class="row">
+				<article class="img-container offset-3 col-2">
+					<img src="<%= profile.foto_perfil %>" alt="foto de perfil" class="foto-perfil">
+				</article>
+				<article class="data-container col-6">
+					<div class="d-flex align-items-center ">
+						<h1 class="main-title"><%= profile.usuario %><!-- Nombre del usuario --> 
+							<a href="/profile/edit">
+								<i class="fas fa-cog"></i>
+							</a>
+						</h1>
+						<a class="btn mt-3 ml-4" href="">SEGUIR</a>
+					</div>
+					<div>
+						<ul>
+							<li><%= profile.email %></li>
+							<li>8 productos</li>
+							<li>200 seguidores</li>
+							<li>300 comentarios</li>
+						</ul>
+					</div>
+				</article>
+			</section>
+		</section>
 
-	<!-- Mis productos -->
-	<div class="container products-wrapper">
-		<div class="row">
-			<div class="col-12">
-				<h2 class="products-title">Mis productos</h2>
-			</div>
-			<!-- Show mis productos -->
-			<% for( let i = 0; i < 8; i++ ) { %>
-				<div class="col-12 col-sm-6 col-lg-3">
-					<section class="product-box">
-						<a href="product/id/<%=productos[i].id%>">
-							<figure class="product-box_image">
-								<img src=<%=productos[i].imagen %> alt=<%=productos[i].nombre %>>
-							</figure>
-						<article class="product-box_data">
-							<h2><%=productos[i].nombre %></h2>
-							<p><%=productos[i].descripcion %></p>
-							<p>Comentarios: <%= cantComentarios%></p>
-						</article>
-						</a>
-					</section>
-				</div>
-			<% } %>
+		<!-- Mis productos -->
+		<section class="container products-wrapper">
+			<section class="row">
 
+				<article class="col-12">
+					<h2 class="products-title">Mis productos</h2>
+				</article>
 
-			<!--<div class="col-12 col-sm-6 col-lg-3">
-				<section class="product-box">
-					<a href="product.html">
-						<figure class="product-box_image">
-							<img src="images/products/default-image.png" alt="cafetera moulinex">
-						</figure>
-						<article class="product-box_data">
-							<h2>Nombre del producto</h2>
-							<p>Descripción corta del producto Lorem ipsum dolor sit amet consectetur, adipisicing elit. Eaque delectus ex</p>
-							<p>Comentarios: 12</p>
-						</article>
-					</a>
-				</section>
-			</div>
-			 <div class="col-12 col-sm-6 col-lg-3">
-				<section class="product-box">
-					<a href="/product">
-						<figure class="product-box_image">
-							<img src="images/products/default-image.png" alt="cafetera moulinex">
-						</figure>
-						<article class="product-box_data">
-							<h2>Nombre del producto</h2>
-							<p>Descripción corta del producto Lorem ipsum dolor sit amet consectetur, adipisicing elit. Eaque
-								delectus ex</p>
-							<p>Comentarios: 12</p>
-						</article>
-					</a>
-				</section>
-			</div>
-			<div class="col-12 col-sm-6 col-lg-3">
-				<section class="product-box">
-					<a href="product.html">
-						<figure class="product-box_image">
-							<img src="images/products/default-image.png" alt="cafetera moulinex">
-						</figure>
-						<article class="product-box_data">
-							<h2>Nombre del producto</h2>
-							<p>Descripción corta del producto Lorem ipsum dolor sit amet consectetur, adipisicing elit. Eaque
-								delectus ex</p>
-							<p>Comentarios: 12</p>
-						</article>
-					</a>
-				</section>
-			</div>
-			<div class="col-12 col-sm-6 col-lg-3">
-				<section class="product-box">
-					<a href="product.html">
-						<figure class="product-box_image">
-							<img src="images/products/default-image.png" alt="cafetera moulinex">
-						</figure>
-						<article class="product-box_data">
-							<h2>Nombre del producto</h2>
-							<p>Descripción corta del producto Lorem ipsum dolor sit amet consectetur, adipisicing elit. Eaque
-								delectus ex</p>
-							<p>Comentarios: 12</p>
-						</article>
-					</a>
-				</section>
-			</div>
-			<div class="col-12 col-sm-6 col-lg-3">
-				<section class="product-box">
-					<a href="product.html">
-						<figure class="product-box_image">
-							<img src="images/products/default-image.png" alt="cafetera moulinex">
-						</figure>
-						<article class="product-box_data">
-							<h2>Nombre del producto</h2>
-							<p>Descripción corta del producto Lorem ipsum dolor sit amet consectetur, adipisicing elit. Eaque
-								delectus ex</p>
-							<p>Comentarios: 12</p>
-						</article>
-					</a>
-				</section>
-			</div>
-			<div class="col-12 col-sm-6 col-lg-3">
-				<section class="product-box">
-					<a href="product.html">
-						<figure class="product-box_image">
-							<img src="images/products/default-image.png" alt="cafetera moulinex">
-						</figure>
-						<article class="product-box_data">
-							<h2>Nombre del producto</h2>
-							<p>Descripción corta del producto Lorem ipsum dolor sit amet consectetur, adipisicing elit. Eaque
-								delectus ex</p>
-							<p>Comentarios: 12</p>
-						</article>
-					</a>
-				</section>
-			</div>
-			<div class="col-12 col-sm-6 col-lg-3">
-				<section class="product-box">
-					<a href="product.html">
-						<figure class="product-box_image">
-							<img src="images/products/default-image.png" alt="cafetera moulinex">
-						</figure>
-						<article class="product-box_data">
-							<h2>Nombre del producto</h2>
-							<p>Descripción corta del producto Lorem ipsum dolor sit amet consectetur, adipisicing elit. Eaque
-								delectus ex</p>
-							<p>Comentarios: 12</p>
-						</article>
-					</a>
-				</section>
-			</div>
-			<div class="col-12 col-sm-6 col-lg-3">
-				<section class="product-box">
-					<a href="product.html">
-						<figure class="product-box_image">
-							<img src="images/products/default-image.png" alt="cafetera moulinex">
-						</figure>
-						<article class="product-box_data">
-							<h2>Nombre del producto</h2>
-							<p>Descripción corta del producto Lorem ipsum dolor sit amet consectetur, adipisicing elit. Eaque
-								delectus ex</p>
-							<p>Comentarios: 12</p>
-						</article>
-					</a>
-				</section>
-			</div> -->
-		</div>
-	</div>
-	<!-- /Mis productos -->
+				<!-- Show mis productos -->
+				<% for( let i = 0; i < 8; i++ ) { %>
+					<div class="col-12 col-sm-6 col-lg-3">
+						<section class="product-box">
+							<a href="product/id/<%=productos[i].id%>">
+								<figure class="product-box_image">
+									<img src=<%=productos[i].imagen %> alt=<%=productos[i].nombre %>>
+								</figure>
+								
+								<article class="product-box_data">
+									<h2><%=productos[i].nombre %></h2>
+									<p><%=productos[i].descripcion %></p>
+									<p>Comentarios: <%= cantComentarios%></p>
+								</article>
+							</a>
+						</section>
+					</div>
+				<% } %>
 
+			</section>
+		</section>
 	</main>
+
 	<!-- footer -->
 	<%- include('./partials/footer') %>
 
-	<!-- /footer -->
 </body>	
 </html>
