--- a/trabajoIntegrador/views/search-results.ejs
+++ b/trabajoIntegrador/views/search-results.ejs
@@ -9,7 +9,7 @@
 
 		<main>
 			<!-- Novedades -->
-			<section class="container products-wrapper">
+			<section class="containerProducts products-wrapper">
 				<article class="d-flex align-items-center">
 					<h2 class="products-title">Resultado de la busqueda: <%=informacionSearch[0].nombre %>       <a href="/product/add"> <i class="fa-regular fa-pen-to-square"></i></a></h2> 
 				</article>
