--- a/trabajoIntegrador/views/partials/footer.ejs
+++ b/trabajoIntegrador/views/partials/footer.ejs
@@ -10,10 +10,10 @@
             </div>
             <div class="col-12 col-lg-4">
                 <article class="footer-data">
-                    <i class="fas fa-gift"></i>
-                    <h2>Envío gratis desde $ 1.999</h2>
-                    <p>Solo por estar registrado en LEGO LAND tenés envíos gratis en miles de productos. Es un
-                        beneficio de LEGO MONEDAS.</p>
+                    <img src="/images/Diseño sin título.png" alt="LEGOS" class="img-footer">
+                   <!-- <i class="fas fa-gift"></i>
+                     <h2>Candela Santo Guiliano, María Guadalupe Ruiz, Joaquin Garcia Devesa</h2>
+                    <p></p> -->
                 </article>
             </div>
             <div class="col-12 col-lg-4">
