--- a/trabajoIntegrador/views/partials/head.ejs
+++ b/trabajoIntegrador/views/partials/head.ejs
@@ -12,7 +12,7 @@
 	<link rel="stylesheet" href="/stylesheets/app.css">
 	<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.1.2/css/all.min.css">
 	<link rel="preconnect" href="https://fonts.googleapis.com">
-	<link rel="preconnect" href="https://fonts.googleapis.com">
 	<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-	<link href="https://fonts.googleapis.com/css2?family=Arimo&family=Kanit&display=swap" rel="stylesheet">
+	<link href="https://fonts.googleapis.com/css2?family=Arimo:ital,wght@0,400;0,500;0,600;0,700;1,600&family=Kanit&display=swap" rel="stylesheet">
+
 </head>
