Cambios en search results y agregué productos en db

--- a/trabajoIntegrador/public/stylesheets/app.css
+++ b/trabajoIntegrador/public/stylesheets/app.css
@@ -100,7 +100,9 @@ h2{
   margin-top: 20px;
   text-align: center;
 } 
-
+.buscador{
+  width: 35vw;
+}
 .search-form {
   position: relative;
   display: flex;
