--- a/trabajoIntegrador/views/index.ejs
+++ b/trabajoIntegrador/views/index.ejs
@@ -10,9 +10,8 @@
 		<main>
 			<!-- Banner -->
 			<section class="banner">
-				<img src="images/banner.png" alt="Banner de ofertas">
+				<a href="product/id/6"><img src="images/banner.png" alt="Banner de ofertas"></a>
 			</section>
-
 
 			<!-- Novedades -->
 			<section class="container products-wrapper">
