--- a/trabajoIntegrador/views/partials/footer.ejs
+++ b/trabajoIntegrador/views/partials/footer.ejs
@@ -10,7 +10,7 @@
             </div>
             <div class="col-12 col-lg-4">
                 <article class="footer-data">
-                    <img src="/images/Diseño sin título.png" alt="LEGOS" class="img-footer">
+                    <img src="/images/integrantes.png" alt="LEGOS" class="img-footer">
                    <!-- <i class="fas fa-gift"></i>
                      <h2>Candela Santo Guiliano, María Guadalupe Ruiz, Joaquin Garcia Devesa</h2>
                     <p></p> -->
