--- a/trabajoIntegrador/views/partials/header.ejs
+++ b/trabajoIntegrador/views/partials/header.ejs
@@ -7,19 +7,13 @@
         </div>
         <div class="row align-items-center containerHeader">
 
-            <div class="">
+            <div class="buscador">
                 <form action="/product/search" method="GET" class="search-form">
                     <input type="text" name="search" placeholder="Buscar productos, marcas y más" class="search-form_input">
                     <button type="submit" class="search-form_button"><i class="fas fa-search"></i></button>
                 </form>
             </div>
         </div>    
-            <!-- <div class="col-12 col-md-4">
-                <a class="main-header_credit-link">
-                    <i class="fas fa-hand-holding-usd"></i>
-                    Todas las opiniones en un solo lugar.
-                </a>
-            </div> -->
 
             <button class="btn-toggle-navbar">
                 <i class="fas fa-bars"></i>
