cambios en product-add

--- a/trabajoIntegrador/views/product-add.ejs
+++ b/trabajoIntegrador/views/product-add.ejs
@@ -27,7 +27,7 @@
 						</article>
 
 						<article class="inputForm">
-							<input type="file" name="imgProducto" value="">
+							<input type="text" name="imgProducto" value="">
 						</article>
 
 						<button type="submit" class="ingresar">Agregar</button>
