--- a/trabajoIntegrador/views/profile-edit.ejs
+++ b/trabajoIntegrador/views/profile-edit.ejs
@@ -15,7 +15,7 @@
 						<h2 class="products-title titleLog">Editar mi perfil</h2>
 					</article>
 
-					<form action="/" method="get" class="formLog">
+					<form action="/profile" method="get" class="formLog">
 						<article class="inputForm">
 							<i class="fa-solid fa-envelope fa-xl icon"></i>
 							<input type="email" name="email" placeholder="Email">
