--- a/trabajoIntegrador/views/profile.ejs
+++ b/trabajoIntegrador/views/profile.ejs
@@ -14,7 +14,7 @@
 				</article>
 				<article class="data-container col-6">
 					<div class="d-flex align-items-center ">
-						<h1 class="main-title"><%= profile.usuario %><!-- Nombre del usuario --> 
+						<h1 class="main-title"><%= profile.usuario %>
 							<a href="/profile/edit">
 								<i class="fas fa-cog"></i>
 							</a>
