--- a/trabajoIntegrador/public/stylesheets/app.css
+++ b/trabajoIntegrador/public/stylesheets/app.css
@@ -185,6 +185,7 @@ h2{
 .perfil{
   padding: 10px;
   display: flex;
+  flex-direction: column;
   justify-content: center;
   text-align: center;
   border-radius: 10%;
