Product add cambie placeholder y el button de seguir en profile

--- a/trabajoIntegrador/public/stylesheets/app.css
+++ b/trabajoIntegrador/public/stylesheets/app.css
@@ -626,7 +626,7 @@ input[type="email"], input[type="password"],input[type="date"],input[type="numbe
 }
 
 .btn{
-  background-color: #1259c3;
+  background-color: #1f1d48;
   padding: 10px 20px;
   border-radius: 4px;
   color: #fff;
