--- a/trabajoIntegrador/views/register.ejs
+++ b/trabajoIntegrador/views/register.ejs
@@ -51,7 +51,7 @@
 							<input type="text" name="fotodeperfil" placeholder="Foto de Perfil" class="text">
 						</article>
 
-						<button type="submit" class="ingresar">Ingresar</button>
+						<button type="submit" class="ingresar">Registrar</button>
 
 					</form>
 				</article>
