--- a/trabajoIntegrador/views/index.ejs
+++ b/trabajoIntegrador/views/index.ejs
@@ -25,7 +25,7 @@
 							<section class="product-box">
 								<a href="product/id/<%=productosMain[i].id%>">
 									<figure class="product-box_image">
-										<img src="<%=productosMain[i].imagen %>" alt="Imagen de <%=productosMain[i].nombre %>">
+										<img src="<%=productosMain[i].foto %>" alt="Imagen de <%=productosMain[i].nombre %>">
 									</figure>
 									<article class="product-box_data">
 										<h2><%=productosMain[i].nombre %></h2>
@@ -52,7 +52,7 @@
 							<section class="product-box">
 								<a href="product/id/<%=productosMain[i].id%>">
 									<figure class="product-box_image">
-										<img src="<%=productosMain[i].imagen %>" alt="Imagen de <%=productosMain[i].nombre %>">
+										<img src="<%=productosMain[i].foto %>" alt="Imagen de <%=productosMain[i].nombre %>">
 									</figure>
 									<article class="product-box_data">
 										<h2><%=productosMain[i].nombre %></h2>
