Buscador y empece con el register

--- a/trabajoIntegrador/views/login.ejs
+++ b/trabajoIntegrador/views/login.ejs
@@ -42,7 +42,7 @@
 				</section>
 			</section>
 
-			<p class="recordar">¿No tenés un perfil? <a href="/register" class="crear">Registrate</a></p>
+			<p class="recordar">¿No tenés un perfil? <a href="/profile/register" class="crear">Registrate</a></p>
 
 		</main>
 		
