--- a/trabajoIntegrador/views/partials/header.ejs
+++ b/trabajoIntegrador/views/partials/header.ejs
@@ -21,11 +21,11 @@
         <nav>
             <ul class="right-navbar">
                 <li >
-                    <a href="/register">Sign in 
+                    <a href="/profile/register">Sign in 
                     </a>
                 </li>
                 <li class="login">
-                    <a href="/login">Log in </a>
+                    <a href="/profile/login">Log in </a>
                 </li>
             </ul>
         </nav>
