--- a/trabajoIntegrador/views/register.ejs
+++ b/trabajoIntegrador/views/register.ejs
@@ -20,7 +20,7 @@
 				</article>
 
 				<article>
-					<form action="/login" method="get" class="formLog">
+					<form action="/profile/login" method="POST" class="formLog">
 						
 						<article class="inputForm">
 							<i class="fa-solid fa-envelope fa-xl icon"></i>
@@ -38,7 +38,7 @@
 						</article>
 
 						<article class="inputForm">
-							<input type="date" name="fechaDeNacimiento" placeholder="Fecha de Nacimiento">
+							<input type="date" name="fecha_nacimiento" placeholder="Fecha de Nacimiento">
 						</article>
 
 						<article class="inputForm">
@@ -48,7 +48,7 @@
 
 						<article class="inputForm">
 							<i class="fa-regular fa-image fa-xl icon"></i>
-							<input type="text" name="fotodeperfil" placeholder="Foto de Perfil" class="text">
+							<input type="text" name="foto_perfil" placeholder="Foto de Perfil" class="text">
 						</article>
 
 						<button type="submit" class="ingresar">Registrar</button>
@@ -59,7 +59,7 @@
 			</section>
 		</section>
 
-		<p class="recordar">¿Ya tenés un perfil? <a href="/login" class="crear">Inicia sesión</a></p>
+		<p class="recordar">¿Ya tenés un perfil? <a href="/profile/login" class="crear">Inicia sesión</a></p>
 
 	</main>
 
