--- a/trabajoIntegrador/views/search-results.ejs
+++ b/trabajoIntegrador/views/search-results.ejs
@@ -12,15 +12,15 @@
 			<section class="container products-wrapper">
 				<section class="row">
 					<article class="col-12">
-						<h2 class="products-title">Resultado de la busqueda:<%=listaProductos[i].nombre %> <a href="/product/add"> <i class="fa-regular fa-pen-to-square"></i></a></h2> 
+						<h2 class="products-title">Resultado de la busqueda:<%= busqueda %> <a href="/product/add"> <i class="fa-regular fa-pen-to-square"></i></a></h2> 
 					</article>
 					<!-- Show the "ultimos" products -->
-					<% for( let i = 0; i < listaProductos.lenght; i++ ) { %>
+					<% for( let i = 0; i < listaProductos.length; i++ ) { %>
 						<article class="col-12 col-sm-6 col-lg-3">
 							<section class="product-box">
 								<a href="id/<%=listaProductos[i].id%>">
 									<figure class="product-box_image">
-										<img src="<%=listaProductos[i].foto %>" alt="Imagen de <%=informacionSearch[i].nombre %>">
+										<img src="<%=listaProductos[i].foto %>" alt="Imagen de <%=listaProductos[i].nombre %>">
 									</figure>
 									<article class="product-box_data">
 										<h2><%=listaProductos[i].nombre %></h2>
