empece con el login

--- a/trabajoIntegrador/views/login.ejs
+++ b/trabajoIntegrador/views/login.ejs
@@ -18,7 +18,7 @@
 						<h2 class="products-title titleLog">Log in</h2>
 					</article>
 						
-					<form action="/profile" method="get" class="formLog">
+					<form action="/profile" method="POST" class="formLog">
 
 						<article class="inputForm">
 							<i class="fa-solid fa-envelope fa-xl icon"></i>
