sigue sin funcionar el register

--- a/trabajoIntegrador/views/register.ejs
+++ b/trabajoIntegrador/views/register.ejs
@@ -21,15 +21,14 @@
 
 				<article>
 					<form action="/profile/login" method="POST" class="formLog">
+						<article class="inputForm">
+							<i class="fa-solid fa-user fa-xl icon"></i>
+							<input type="text" name="usuario" placeholder="Usuario" class="text">
+						</article>
 						
 						<article class="inputForm">
 							<i class="fa-solid fa-envelope fa-xl icon"></i>
 							<input type="email" name="email" placeholder="Email">
-						</article>
-
-						<article class="inputForm">
-							<i class="fa-solid fa-user fa-xl icon"></i>
-							<input type="text" name="usuario" placeholder="Usuario" class="text">
 						</article>
 
 						<article class="inputForm">
@@ -46,12 +45,12 @@
 							<input type="number" name="documento" placeholder="Número de Documento">
 						</article>
 
-						<article class="inputForm">
+<!-- 						<article class="inputForm">
 							<i class="fa-regular fa-image fa-xl icon"></i>
 							<input type="text" name="foto_perfil" placeholder="Foto de Perfil" class="text">
-						</article>
+						</article> -->
 
-						<button type="submit" class="ingresar">Registrar</button>
+						<button type="text" class="ingresar">Registrar</button>
 
 					</form>
 				</article>
