--- a/trabajoIntegrador/views/register.ejs
+++ b/trabajoIntegrador/views/register.ejs
@@ -20,7 +20,7 @@
 				</article>
 
 				<article>
-					<form action="/profile/login" method="POST" class="formLog">
+					<form action="/profile/register" method="POST" class="formLog">
 						<article class="inputForm">
 							<i class="fa-solid fa-user fa-xl icon"></i>
 							<input type="text" name="usuario" placeholder="Usuario" class="text">
@@ -58,7 +58,7 @@
 			</section>
 		</section>
 
-		<p class="recordar">¿Ya tenés un perfil? <a href="/profile/login" class="crear">Inicia sesión</a></p>
+		<p class="recordar">¿Ya tenés un perfil? <a href="/profile/register" class="crear">Inicia sesión</a></p>
 
 	</main>
 
