Product edit, empezamos product.ejs

--- a/trabajoIntegrador/views/product-add.ejs
+++ b/trabajoIntegrador/views/product-add.ejs
@@ -16,10 +16,10 @@
 						<h2 class="products-title titleLog">Agregar productos</h2>
 					</article>
 
-					<form action="/" method="get" class="formLog">
+					<form action="/product/add" method="POST" class="formLog">
 
 						<article class="inputForm">
-							<input type="text" name="producto" placeholder= "Nombre del producto" value="" class="text"> 
+							<input type="text" name="nombre" placeholder= "Nombre del producto" value="" class="text"> 
 						</article>
 
 						<article class="inputForm">
@@ -27,7 +27,7 @@
 						</article>
 
 						<article class="inputForm">
-							<input type="text" name="imgProducto" value="" placeholder="Foto del producto" class="text">
+							<input type="text" name="foto" value="" placeholder="Foto del producto" class="text">
 						</article>
 
 						<button type="submit" class="ingresar">Agregar</button>
