--- a/trabajoIntegrador/views/login.ejs
+++ b/trabajoIntegrador/views/login.ejs
@@ -34,7 +34,7 @@
 
 						<article class="inputRecordar">
 							<p class="recordar">¿Querés que te recordemos? </p>
-							<input class="recordar" type="checkbox" name="recordame" class="inputForm">
+							<input class="recordar" type="checkbox" name="rememberme" class="inputForm">
 						</article>
 
 					</form>
