--- a/trabajoIntegrador/views/register.ejs
+++ b/trabajoIntegrador/views/register.ejs
@@ -45,10 +45,10 @@
 							<input type="number" name="documento" placeholder="Número de Documento">
 						</article>
 
-<!-- 						<article class="inputForm">
+						<article class="inputForm">
 							<i class="fa-regular fa-image fa-xl icon"></i>
-							<input type="text" name="foto_perfil" placeholder="Foto de Perfil" class="text">
-						</article> -->
+							<input type="text" name="foto_perfil" placeholder="Foto de Perfil" class="text" value="">
+						</article>
 
 						<button type="text" class="ingresar">Registrar</button>
 
