--- a/trabajoIntegrador/views/partials/headerLogueado.ejs
+++ b/trabajoIntegrador/views/partials/headerLogueado.ejs
@@ -23,15 +23,16 @@
 			<ul class="listaLogueado">
 				<li class="perfil">
 					<a href="/profile"> 
-						<img class="imgPerfil" src="<%= profile.foto_perfil %>" alt="Foto de perfil de <%= profile.usuario %>">
+						<img class="imgPerfil" src="<%= locals.user.foto_perfil %>" alt="Foto de perfil de <%= locals.user.usuario %>">
 					</a>
-					<a href="/profile"> <%= profile.usuario %></a>
+					<a href="/profile"> <%= locals.user.usuario %></a>
 				</li> 
 				<li class="login">
-					<form action="/" method="get">
+					<form action="/profile/logout" method="POST">
 						<button class="logout" type="submit">
 							Log out
-						</button>
+						</button> 
+						<!-- <a href="/profile/logout" class="logout">Log out</a> -->
 					</form>
 				</li>
 			</ul>
