Perfil.ejs y cambios en comentarios del producto

--- a/trabajoIntegrador/views/register.ejs
+++ b/trabajoIntegrador/views/register.ejs
@@ -17,6 +17,9 @@
 
 				<article class="col-12">
 					<h2 class="products-title titleLog">Sign in</h2>
+					<% if (locals.errors) { %>
+						<p style="color: red;"><%= errors.message %></p>
+					<% } %>
 				</article>
 
 				<article>
