--- a/trabajoIntegrador/views/partials/headerLogueado.ejs
+++ b/trabajoIntegrador/views/partials/headerLogueado.ejs
@@ -25,14 +25,13 @@
 					<a href="/profile"> 
 						<img class="imgPerfil" src="<%= locals.user.foto_perfil %>" alt="Foto de perfil de <%= locals.user.usuario %>">
 					</a>
-					<a href="/profile"> <%= locals.user.usuario %></a>
+					<a href="/profile"> ¡Hola <%= locals.user.usuario %>!</a>
 				</li> 
 				<li class="login">
 					<form action="/profile/logout" method="POST">
 						<button class="logout" type="submit">
 							Log out
 						</button> 
-						<!-- <a href="/profile/logout" class="logout">Log out</a> -->
 					</form>
 				</li>
 			</ul>
