--- a/trabajoIntegrador/views/product-edit.ejs
+++ b/trabajoIntegrador/views/product-edit.ejs
@@ -5,7 +5,7 @@
 
 	<body>
 		<!-- Header -->
-		<%- include('./partials/header') %>
+		<%- include('./partials/headerLogueado') %>
 
 		<main class="mainLog">
 			<section class="products-wrapper containerLog containerEdit">
