--- a/trabajoIntegrador/views/profile.ejs
+++ b/trabajoIntegrador/views/profile.ejs
@@ -10,15 +10,11 @@
 		<section class="info-usuario container products-wrapper">
 			<section class="row">
 				<article class="img-container offset-3 col-2">
-					<% if (profile.foto_perfil != null) { %>
-						<img src="<%= profile.foto_perfil %>" alt="foto de perfil" class="foto-perfil">
-					<% } else {%>
-						<img src="/images/users/perfilDefault.png" alt="foto de perfil" class="foto-perfil">
-						<% }%>
+					<img src="<%= locals.user.foto_perfil %>" alt="foto de perfil" class="foto-perfil">
 				</article>
 				<article class="data-container col-6">
 					<div class="d-flex align-items-center ">
-						<h1 class="main-title"><%= profile.usuario %>
+						<h1 class="main-title"><%= locals.user.usuario %>
 							<a href="/profile/edit">
 								<i class="fas fa-cog"></i>
 							</a>
@@ -27,8 +23,8 @@
 					</div>
 					<div>
 						<ul>
-							<li><%= profile.email %></li>
-							<li>8 productos</li>
+							<li><%= locals.user.email %></li>
+							<li><%= producto.length %> productos</li>
 							<li>200 seguidores</li>
 							<li>300 comentarios</li>
 						</ul>
@@ -46,23 +42,27 @@
 				</article>
 
 				<!-- Show mis productos -->
-				<% for( let i = 0; i < 8; i++ ) { %>
-					<div class="col-12 col-sm-6 col-lg-3">
-						<section class="product-box">
-							<a href="product/id/<%=productos[i].id%>">
-								<figure class="product-box_image">
-									<img src=<%=productos[i].imagen %> alt=<%=productos[i].nombre %>>
-								</figure>
-								
-								<article class="product-box_data">
-									<h2><%=productos[i].nombre %></h2>
-									<p><%=productos[i].descripcion %></p>
-									<p>Comentarios: <%= cantComentarios%></p>
-								</article>
-							</a>
-						</section>
-					</div>
-				<% } %>
+				<% if (producto.length > 0) { %>
+					<% for( let i = 0; i < producto.length; i++ ) { %>
+						<div class="col-12 col-sm-6 col-lg-3">
+							<section class="product-box">
+								<a href="product/id/<%=producto[i].id%>">
+									<figure class="product-box_image">
+										<img src=<%=producto[i].foto %> alt=<%=producto[i].nombre %>>
+									</figure>
+									
+									<article class="product-box_data">
+										<h2><%=producto[i].nombre %></h2>
+										<p><%=producto[i].descripcion %></p>
+										<p>Comentarios: 5</p>
+									</article>
+								</a>
+							</section>
+						</div>
+					<% } %>
+				<% } else {%>
+					<h2> No tienes productos</h2>
+					<% } %>
 
 			</section>
 		</section>
